# serenitybot

./: Cargo.toml  README.md
src/: commands.rs  docs.json  lib.rs  main.rs  structures.rs
