[package]
name = "serenitybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default_features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde_json = { version = "1.0.96" }
serde = { version = "1.0.163", features = ["derive"] }
rand = "0.8.5"
